--- a/index.html
+++ b/index.html
@@ -17,56 +17,54 @@
   <title>Be Yourself</title>
  </head>
  <body>
-  <div class="container">
-   <header id="header">
-    <div class="header-banner">
-     <b> Envío gratis desde $10.000</b>
-    </div>
-    <!-- logo/Home -->
-     <a href=""><img  id="logo-home" src= "img/faviconII200x100px.png" alt="BE"></a>
-   </header>
-   <div>
-   <nav id="nav"  class="nav">
-    <input id="abrir-cerrar" name="abrir-cerrar" type="checkbox" value="" />
-    <label for="abrir-cerrar" class="toggle-button">
-     <span class="cerrar" title="Cerrar">Cerrar</span>
-     <span class="abrir" title="Abrir">Abrir</span>
-    </label>
-    <!-- Listas y links de Navegación -->
-    <ul class="nav-menu">
-     <li class="link">
-      <a class="link" href="pages/newin.html">NEW IN</a>
-     </li>
-     <li>
-      <a class="link olor-primary" href="pages/coleccion.html">COLECCION </a>
-     </li>
-     <li>
-      <a class="link color-primary" href="pages/accesorios.html">ACCESORIOS</a>
-     </li>
-     <li>
-      <a class="link color-primary" href="pages/beauty.html">BEAUTY</a>
-     </li>
-     <li>
-      <a class="link color-primary" href="pages/promociones.html">PROMOCIONES</a>
-     </li>
-     <li>
-      <a class="link color-primary" href="#contacto-home">CONTACTO</a> 
-     </li>
-     </ul>
-     <ul class="nav-menu-color-primary" >
-      <li >
-       <a class="fondo" href="pages/items/buscar.html">Buscar</a> 
-      </li>
-      <li>
-       <a class="fondo" href="pages/items/iniciarsesion.html">Iniciar Sesión</a> 
-      </li>
-      <li>
-       <a class="fondo" href="pages/items/micarrito.html">Mi Carrito</a> 
-      </li>
-     </ul>
-    </nav>
-   </div>   
-  <main>
+  <header id="header">
+   <div class="header-banner">
+    <b> Envío gratis desde $10.000</b>
+   </div>
+   <!-- logo/Home -->
+   <a href=""><img  id="logo-home" src= "img/faviconII200x100px.png" alt="BE"></a>
+ </header>
+ <div>
+  <nav id="nav"  class="nav">
+   <input id="abrir-cerrar" name="abrir-cerrar" type="checkbox" value="" />
+   <label for="abrir-cerrar" class="toggle-button">
+    <span class="cerrar" title="Cerrar">Cerrar</span>
+    <span class="abrir" title="Abrir">Abrir</span>
+   </label>
+   <!-- Listas y links de Navegación -->
+   <ul class="nav-menu">
+    <li class="link">
+     <a class="link color-primary" href="pages/newin.html">NEW IN</a>
+    </li>
+    <li>
+     <a class="link color-primary" href="pages/coleccion.html">COLECCION </a>
+    </li>
+    <li>
+     <a class="link color-primary" href="pages/accesorios.html">ACCESORIOS</a>
+    </li>
+    <li>
+     <a class="link color-primary" href="pages/beauty.html">BEAUTY</a>
+    </li>
+    <li>
+     <a class="link color-primary" href="pages/promociones.html">PROMOCIONES</a>
+    </li>
+    <li>
+     <a class="link color-primary" href="#contacto-home">CONTACTO</a> 
+    </li>
+    <li >
+     <a class="link color-primary" href="pages/items/buscar.html">Buscar</a> 
+    </li>
+    <li>
+     <a class="link color-primary" href="pages/items/iniciarsesion.html">Iniciar Sesión</a> 
+    </li>
+    <li>
+     <a class="link color-primary" href="pages/items/micarrito.html">Mi Carrito</a> 
+    </li>
+   </ul>
+  </nav>
+ </div>   
+
+ <main  class="container-fluid py4 #b47bca">
    <div class="pagina-principal">
     <h1>Elegí tus looks</h1>
     <h2> INSPIRATE</h2>
@@ -76,24 +74,24 @@
      <p>
       <a class="btn btn-primary" data-bs-toggle="collapse" href="#multiCollapseExample1" role="button" aria-expanded="false" aria-controls="multiCollapseExample1">Toggle first element</a>
       <button class="btn btn-primary" type="button" data-bs-toggle="collapse"    data-bs-target="#multiCollapseExample2" aria-expanded="false" aria-controls="multiCollapseExample2">Toggle second element</button>
-       </p>
-       <div class="row">
-        <div class="col">
-         <div class="collapse multi-collapse" id="multiCollapseExample1">
-          <div class="card card-body">
-           Some placeholder content for the first collapse component of this multi-collapse example. This panel is hidden by default but revealed when the user activates the relevant trigger.
-      </div>
-     </div>
-   </div>
+     </p>
+     <div class="row">
       <div class="col">
-       <div class="collapse multi-collapse" id="multiCollapseExample2">
+       <div class="collapse multi-collapse" id="multiCollapseExample1">
         <div class="card card-body">
-         Some placeholder content for the second collapse component of this multi-collapse example. This panel is hidden by default but revealed when the user activates the relevant trigger.
+         Some placeholder content for the first collapse component of this multi-collapse example. This panel is hidden by default but revealed when the user activates the relevant trigger.
         </div>
        </div>
      </div>
+     <div class="col">
+      <div class="collapse multi-collapse" id="multiCollapseExample">
+       <div class="card card-body">
+         Some placeholder content for the second collapse component of this multi-collapse example. This panel is hidden by default but revealed when the user activates the relevant trigger.
+       </div>
+      </div>
+     </div>
     </div>
-    <img class="fotos-altas" src=img/look-pantfluo.jpg alt="INSPIRACION LOOKS">
+    <img class="fotos-altas1" src=img/look-pantfluo.jpg alt="INSPIRACION LOOKS">
      <p>
       <a class="btn btn-primary" data-bs-toggle="collapse" href="#multiCollapseExample1" role="button" aria-expanded="false" aria-controls="multiCollapseExample1">¿TEAM COMFY?</a>
      </p>
@@ -106,7 +104,7 @@
      </div>
     </div>
     <div>
-     <img class="fotos-altas" src=img/home-pants-topfluorose.jpg alt="INSPIRACION LOOKS">
+     <img class="fotos-altas1" src=img/home-pants-topfluorose.jpg alt="INSPIRACION LOOKS">
      <p>
       <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseWidthExample" aria-expanded="false" aria-controls="collapseWidthExample">
       ¿TEAM NIGHT?     
@@ -121,31 +119,41 @@
      </div>
     </div>
   </div>
-    <div  class="pagina-principal">
+  <div  class="pagina-principal">
       <H2>LOOKS DE INSPIRACION</H2>
       <H3>ELEGI EL TUYO</H3>
     </div>
     <div class="pagina-principal-imagen-texto">
-     <img class="fotos-altas rotar" src= img/look2.jpg alt="INSPIRACION LOOKS">
-     <img class="fotos-altas rotar" src=img/look3.jpg alt="INSPIRACION LOOKS">
-     <img class="fotos-altas rotar" src=img/look4.jpg alt="INSPIRACION LOOKS">
-     <img class="fotos-altas rotar" src= img/look5.jpg alt="INSPIRACION LOOKS">
-     <img class="fotos-altas rotar" src= img/look6.jpg alt="INSPIRACION LOOKS">
-     <img class="fotos-altas rotar" src= img/look7.jpg alt="INSPIRACION LOOKS">
-    </div>
-    <div class="producto-look">
-      <p class="producto-look">Pantalón</p> 
-      <p class="producto-look">Precio</p>
-      <p class="producto-look">Remera</p>
-      <p class="producto-look">Precio</p>
-      <p class="producto-look">Saco</p>
-      <p class="producto-look">Precio</p>
-      <p class="producto-look">Blusa</p>
-      <p class="producto-look">Precio</p>
-      <p class="producto-look">Palazzo</p>
-      <p class="producto-look">Precio</p>
-      <p class="producto-look">Remera </p>
-      <p class="producto-look">Precio</p>
+      <figure class="figure">
+       <img class="fotos-altas rotar"  class="figure-caption text-start" src= img/look2.jpg alt="INSPIRACION LOOKS">
+       <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
+       <figcaption class="figure-caption text-end">A caption for the above image.</figcaption>
+      </figure>
+      <figure class="figure">
+       <img class="fotos-altas rotar" class="figure-caption text-start" src=img/look3.jpg alt="INSPIRACION LOOKS">
+       <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
+       <figcaption class="figure-caption text-end">A caption for the above image.</figcaption>
+      </figure>
+      <figure class="figure">
+       <img class="fotos-altas rotar" class="figure-caption text-start" src=img/look4.jpg alt="INSPIRACION LOOKS">
+       <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
+       <figcaption class="figure-caption text-end">A caption for the above image.</figcaption>
+      </figure>
+      <figure class="figure">
+       <img class="fotos-altas rotar" class="figure-caption text-start" src= img/look5.jpg alt="INSPIRACION LOOKS">
+       <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
+       <figcaption class="figure-caption text-end">A caption for the above image.</figcaption>
+      </figure>
+      <figure class="figure">
+       <img class="fotos-altas rotar" class="figure-caption text-start" src= img/look6.jpg alt="INSPIRACION LOOKS">
+       <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
+       <figcaption class="figure-caption text-end">A caption for the above image.</figcaption>
+      </figure> 
+      <figure class="figure">
+       <img class="fotos-altas rotar" src= img/look7.jpg alt="INSPIRACION LOOKS">
+       <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
+       <figcaption class="figure-caption text-end">A caption for the above image.</figcaption>
+      </figure>
      </div>
   </main>
   
@@ -190,6 +198,7 @@
   </footer>
  </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+</div>
 </body>
 </html>
 
