--- a/pages/accesorios.html
+++ b/pages/accesorios.html
@@ -16,11 +16,10 @@
  <link rel="shortcut icon" href="../img/favicon3.png">
  <link rel="stylesheet" href="../css/main.css">
 </head>
-
 <body>
  <header id="header">
   <div class="header-banner">
-    <b> Envío gratis desde $10.000</b>
+   <b> Envío gratis desde $10.000</b>
   </div> 
   <!-- logo/Home -->
   <a href="../index.html"><img  id="logo-home" src= "../img/faviconII200x100px.png" alt="BE"> </a>
@@ -55,13 +54,12 @@
    <li>
     <a class="color-primary" href="#contacto-home">CONTACTO</a> 
    </li>
-  </ul>
-  <ul class="nav-menu-color-primary" >  
    <li>
-    <a class="fondo" href="items/iniciarsesion.html">Iniciar Sesión</a> 
+    <a class="link color-primary" href="items/iniciarsesion.html">Iniciar Sesión</a> 
    </li>
    <li>
-    <a class="fondo" href="items/micarrito.html">Mi Carrito</a> 
+    <a class="link color-primary" href="items/micarrito.html">Mi Carrito</a> 
+   </li>
   </ul>
  </nav>
 
@@ -72,76 +70,218 @@
    <p>LOS ACCESORIOS COMPLETAN LOOKS TANTO CASUALES COMO FORMALES. TÚ PERSONALIDAD SE ELEVA AL AÑADIRLOS: UN PAÑUELO, UN GORRO,UNA BUFANDA, GAFAS Y COMPLEMENTOS PARA EL PELO QUE PONEN EL BROCHE FINAL A CUALQUIER OUTFIT. NUESTRA EDICIÓN ESTÁ PENSADA PARA AÑADIR UN DETALLE O PARA CAUSAR EL MÁXIMO IMPACTO COMBINANDO UNA O VARIAS PIEZAS. LA COLECCIÓN DE ACCESORIOS TE PERMITE IMAGINAR Y CREAR TU PROPIO LOOK. DESDE PULSERAS Y BRAZALETES HASTA CARTERAS Y CINTURONES</p>
   </div>
   <div class="pagina-principal">
-   <div>
-    <img  class="fotos-cuadradas11 zoom"src="../img/zara-sombreros-paja.jpg" alt="COLECCION">
-    <img class="fotos-cuadradas11 zoom" src="../img/sobrederafiayellowline.jpg" alt="COLECCION">
-   </div>    
-   <div>  
-    <img class="fotos-cuadradas zoom" src="../img/zara-diadema-calida.jpg" alt="COLECCION">
-    <img class="fotos-cuadradas zoom" src="../img/vinchatrenzada.jpg" alt="COLECCION">
-   </div> 
-   <div>
-    <img class="fotos-cuadradas zoom"src="../img/pulserascoloresflecos.jpg" alt="COLECCION">
-    <img class="fotos-cuadradas zoom"src="../img/pulserasbohemias.jpg" alt="COLECCION">
-    <img class="fotos-cuadradas zoom"src="../img/accesorios-pulseraancla-verano.jpg" alt="COLECCION">
-    <img class="fotos-cuadradas zoom"src="../img/tendenciaspanueloazul.jpg" alt="COLECCION">
-    <img class="fotos-cuadradas zoom"src="../img/tendenciacartera.jpg" alt="COLECCION">
-   </div>  
-    <h2>
-     Liberá tu Creatividad
-    </h2>
-   <div>
-    <img  class="fotos-cuadradas zoom"src="../img/pendientescruzdeestrella.jpg" alt="COLECCION">
-   </div>  
-   <div>
-    <img class="fotos-cuadradas zoom" src="../img/aaccesorios2-arosperlas.jpg" alt="COLECCION">
-    <img class="fotos-cuadradas zoom"src="../img/accesorios-arocolgantes-perlascascada.jpg" alt="COLECCION">
-    <img class="fotos-cuadradas zoom" src="../img/accesorios-arosflorescascadablancas.jpg" alt="COLECCION">
-   </div>
-   <div>
-    <img class="fotos-cuadradas zoom"src="../img/accesorios-arosfloresblancas.jpg" alt="COLECCION">
-   </div>  
-   <div>
-    <img class="fotos-cuadradas zoom" src="../img/accesorios1-arosseisperlas.jpg" alt="COLECCION">
-    <img class="fotos-cuadradas zoom" src="../img/accesorios-pendientescirculargrande-perlas.jpg" alt="COLECCION">
-    <img class="fotos-cuadradas zoom" src="../img/accesorios-arosperlas-joyerinusual.jpg" alt="COLECCION">
-   </div>
-   <div>
-    <img class="fotos-cuadradas zoom"src="../img/accesorios-aroslargos-colgantes-isadora.jpg" alt="COLECCION">
-   </div> 
-   <div>
-    <img class="fotos-cuadradas zoom"src="../img/accesorios-arosflorestranslucidas.jpg" alt="COLECCION">
-   </div> 
-   <div>
-    <img class="fotos-cuadradas zoom"src="../img/accesorioscollarperlasrojorosa.jpg" alt="COLECCION">
-   </div> 
-   <div>
-    <img class="fotos-cuadradas12" src="../img/accesorios-gafasrojas.jpg" alt="COLECCION">
-    <img class="fotos-cuadradas13 " src="../img/accesorios-gafasbatblack.jpg" alt="COLECCION">
-    <img class="fotos-cuadradas1 zoom" src="../img/accesorios-viseras.jpg" alt="COLECCION">
+    <div>
+     <figure class="figure">
+      <img  class="fotos-cuadradas11 zoom"src="../img/zara-sombreros-paja.jpg" alt="COLECCION">
+      <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
+      <figcaption class="figure-caption text-end">$PRECIO.</figcaption>
+     </figure>
+     <figure class="figure">
+      <img class="fotos-cuadradas11 zoom" src="../img/sobrederafiayellowline.jpg" alt="COLECCION">
+      <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
+      <figcaption class="figure-caption text-end">$PRECIO.</figcaption>
+     </figure>
+    </div>    
+    <div>  
+     <figure class="figure">
+      <img class="fotos-cuadradas zoom" src="../img/zara-diadema-calida.jpg" alt="COLECCION">
+      <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
+      <figcaption class="figure-caption text-end">$PRECIO.</figcaption>
+     </figure>
+     <figure class="figure">
+      <img class="fotos-cuadradas zoom" src="../img/vinchatrenzada.jpg" alt="COLECCION">
+      <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
+      <figcaption class="figure-caption text-end">$PRECIO.</figcaption>
+     </figure>
+    </div> 
+    <div>
+     <figure class="figure">
+      <img class="fotos-cuadradas zoom"src="../img/pulserascoloresflecos.jpg" alt="COLECCION">
+      <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
+      <figcaption class="figure-caption text-end">$PRECIO.</figcaption>
+     </figure> 
+     <figure class="figure">
+      <img class="fotos-cuadradas zoom"src="../img/pulserasbohemias.jpg" alt="COLECCION">
+      <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
+      <figcaption class="figure-caption text-end">$PRECIOe.</figcaption>
+     </figure>
+     <figure class="figure">
+      <img class="fotos-cuadradas zoom"src="../img/accesorios-pulseraancla-verano.jpg" alt="COLECCION">
+      <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
+      <figcaption class="figure-caption text-end">$PRECIO.</figcaption>
+     </figure>
+     <figure class="figure">
+      <img class="fotos-cuadradas zoom"src="../img/tendenciaspanueloazul.jpg" alt="COLECCION">
+      <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
+      <figcaption class="figure-caption text-end">$PRECIO.</figcaption>
+     </figure>
+     <figure class="figure">
+      <img class="fotos-cuadradas zoom"src="../img/tendenciacartera.jpg" alt="COLECCION">
+      <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
+      <figcaption class="figure-caption text-end">$PRECIO.</figcaption>
+     </figure>
+    </div>  
+    <h2> Liberá tu Creatividad</h2>
+    <div>
+     <figure class="figure">
+      <img  class="fotos-cuadradas zoom"src="../img/pendientescruzdeestrella.jpg" alt="COLECCION">
+      <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
+      <figcaption class="figure-caption text-end">$PRECIO.</figcaption>
+     </figure>
+    </div>  
+    <div>
+     <figure class="figure">
+      <img class="fotos-cuadradas zoom" src="../img/aaccesorios2-arosperlas.jpg" alt="COLECCION">
+      <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
+      <figcaption class="figure-caption text-end">$PRECIO.</figcaption>
+     </figure>
+     <figure class="figure">
+      <img class="fotos-cuadradas zoom"src="../img/accesorios-arocolgantes-perlascascada.jpg" alt="COLECCION">
+      <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
+      <figcaption class="figure-caption text-end">$PRECIO.</figcaption>
+     </figure>
+     <figure class="figure">
+      <img class="fotos-cuadradas zoom" src="../img/accesorios-arosflorescascadablancas.jpg" alt="COLECCION">
+      <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
+      <figcaption class="figure-caption text-end">$PRECIO.</figcaption>
+     </figure>
     </div>
-   <div>
-    <img class="fotos-cuadradas zoom" src="../img/accesoriosanillos-mariposascolores.jpg" alt="COLECCION">
-    <img class="fotos-cuadradas zoom" src="../img/accesoriosanillos-luxury.jpg" alt="COLECCION">
-    <img class="fotos-cuadradas zoom" src="../img/accesorios-anillos-mariposacristal-dijevintage.jpg" alt="COLECCION">
-    <img class="fotos-cuadradas zoom" src="../img/accesorios-anillomariposacalada.jpg" alt="COLECCION">
+    <div>
+     <figure class="figure">
+      <img class="fotos-cuadradas zoom"src="../img/accesorios-arosfloresblancas.jpg" alt="COLECCION">
+      <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
+      <figcaption class="figure-caption text-end">$PRECIO.</figcaption>
+     </figure>
+    </div>  
+    <div>
+     <figure class="figure">
+      <img class="fotos-cuadradas zoom" src="../img/accesorios1-arosseisperlas.jpg" alt="COLECCION">
+      <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
+      <figcaption class="figure-caption text-end">$PRECIO.</figcaption>
+     </figure>
+     <figure class="figure">
+      <img class="fotos-cuadradas zoom" src="../img/accesorios-pendientescirculargrande-perlas.jpg" alt="COLECCION">
+      <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
+      <figcaption class="figure-caption text-end">$PRECIO</figcaption>
+     </figure>
+     <figure class="figure">
+      <img class="fotos-cuadradas zoom" src="../img/accesorios-arosperlas-joyerinusual.jpg" alt="COLECCION">
+      <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
+      <figcaption class="figure-caption text-end">$PRECIO</figcaption>
+     </figure>
+    </div>
+    <div>
+     <figure class="figure">
+      <img class="fotos-cuadradas zoom"src="../img/accesorios-aroslargos-colgantes-isadora.jpg" alt="COLECCION">
+      <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
+      <figcaption class="figure-caption text-end">$PRECIO.</figcaption>
+     </figure>
+    </div> 
+    <div>
+     <figure class="figure">
+      <img class="fotos-cuadradas zoom"src="../img/accesorios-arosflorestranslucidas.jpg" alt="COLECCION">
+      <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
+      <figcaption class="figure-caption text-end">$PRECIO</figcaption>
+     </figure>
+    </div> 
+    <div>
+     <figure class="figure">
+      <img class="fotos-cuadradas zoom"src="../img/accesorioscollarperlasrojorosa.jpg" alt="COLECCION">
+      <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
+      <figcaption class="figure-caption text-end">$PRECIO</figcaption>
+     </figure>
+    </div> 
+    <div>
+     <figure class="figure">
+      <img class="fotos-cuadradas12" src="../img/accesorios-gafasrojas.jpg" alt="COLECCION">
+      <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
+      <figcaption class="figure-caption text-end">$PRECIO</figcaption>
+     </figure>
+     <figure class="figure">
+      <img class="fotos-cuadradas13 " src="../img/accesorios-gafasbatblack.jpg" alt="COLECCION">
+      <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
+      <figcaption class="figure-caption text-end">$PRECIO.</figcaption>
+     </figure>
+     <figure class="figure">
+      <img class="fotos-cuadradas1 zoom" src="../img/accesorios-viseras.jpg" alt="COLECCION">
+      <figcaption class="figure-caption text-start">PRODUCTO</figcaption>
+      <figcaption class="figure-caption text-end">$PRECIO</figcaption>
+     </figure>
+    </div>
+    <div>
+     <figure class="figure">
+      <img class="fotos-cuadradas zoom" src="../img/accesoriosanillos-mariposascolores.jpg" alt="COLECCION">
+      <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
+      <figcaption class="figure-caption text-end">$PRECIO</figcaption>
+     </figure>
+     <figure class="figure">
+      <img class="fotos-cuadradas zoom" src="../img/accesoriosanillos-luxury.jpg" alt="COLECCION">
+      <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
+      <figcaption class="figure-caption text-end">$PRECIO</figcaption>
+     </figure>
+     <figure class="figure">
+      <img class="fotos-cuadradas zoom" src="../img/accesorios-anillos-mariposacristal-dijevintage.jpg" alt="COLECCION">
+      <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
+      <figcaption class="figure-caption text-end">$PRECIO</figcaption>
+     </figure>
+     <figure class="figure">
+      <img class="fotos-cuadradas zoom" src="../img/accesorios-anillomariposacalada.jpg" alt="COLECCION">
+      <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
+      <figcaption class="figure-caption text-end">$PRECIO</figcaption>
+     </figure>
+    </div>
+    <div>
+     <figure class="figure">
+      <img class="fotos-cuadradas zoom" src="../img/holdercelurosaamarillo.jpg" alt="COLECCION">
+      <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
+      <figcaption class="figure-caption text-end">$PRECIO</figcaption>
+     </figure>
+     <figure class="figure">
+      <img class="fotos-cuadradas zoom" src="../img/holdercelumamalove.jpg" alt="COLECCION">
+      <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
+      <figcaption class="figure-caption text-end">$PRECIO</figcaption>
+     </figure>
+     <figure class="figure">
+      <img class="fotos-cuadradas zoom" src="../img/holderceluhappy.jpg" alt="COLECCION">
+      <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
+      <figcaption class="figure-caption text-end">$PRECIO</figcaption>
+     </figure>
+     <figure class="figure">
+      <img class="fotos-cuadradas zoom" src="../img/holderceluazul.jpg" alt="COLECCION">
+      <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
+      <figcaption class="figure-caption text-end">$PRECIO</figcaption>
+     </figure>
+    </div>
+    <div>
+     <figure class="figure">
+      <img class="fotos-cuadradas zoom"src="../img/holdercelu.jpg" alt="COLECCION">
+      <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
+      <figcaption class="figure-caption text-end">$PRECIO</figcaption>
+     </figure>
+    </div> 
+    <div>
+     <figure class="figure">
+      <img class="fotos-cuadradas zoom" src="../img/hebillasperlas2.jpg" alt="COLECCION">
+      <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
+      <figcaption class="figure-caption text-end">$PRECIO</figcaption>
+     </figure>
+     <figure class="figure">
+      <img class="fotos-cuadradas zoom" src="../img/hebillasperlas.jpg" alt="COLECCION">
+      <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
+      <figcaption class="figure-caption text-end">$PRECIO</figcaption>
+     </figure>
+     <figure class="figure">
+      <img class="fotos-cuadradas zoom" src="../img/gorrabeisballredbatik.jpg" alt="COLECCION">
+      <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
+      <figcaption class="figure-caption text-end">$PRECIO</figcaption>
+     </figure>
+     <figure class="figure">
+      <img class="fotos-cuadradas zoom" src="../img/gorrabeisballred.jpg" alt="COLECCION">
+      <figcaption class="figure-caption text-start">GORRA</figcaption>
+      <figcaption class="figure-caption text-end">$PRECIO</figcaption>
+     </figure>
+    </div>
    </div>
-   <div>
-    <img class="fotos-cuadradas zoom" src="../img/holdercelurosaamarillo.jpg" alt="COLECCION">
-    <img class="fotos-cuadradas zoom" src="../img/holdercelumamalove.jpg" alt="COLECCION">
-    <img class="fotos-cuadradas zoom" src="../img/holderceluhappy.jpg" alt="COLECCION">
-    <img class="fotos-cuadradas zoom" src="../img/holderceluazul.jpg" alt="COLECCION">
-   </div>
-   <div>
-    <img class="fotos-cuadradas zoom"src="../img/holdercelu.jpg" alt="COLECCION">
-   </div> 
-   <div>
-    <img class="fotos-cuadradas zoom" src="../img/hebillasperlas2.jpg" alt="COLECCION">
-    <img class="fotos-cuadradas zoom" src="../img/hebillasperlas.jpg" alt="COLECCION">
-    <img class="fotos-cuadradas zoom" src="../img/gorrabeisballredbatik.jpg" alt="COLECCION">
-    <img class="fotos-cuadradas zoom" src="../img/gorrabeisballred.jpg" alt="COLECCION">
-   </div>
-  </div>
  </main>
 
  <hr>
