--- a/pages/beauty.html
+++ b/pages/beauty.html
@@ -16,7 +16,6 @@
   <link rel="shortcut icon" href="../img/favicon3.png">
   <link rel="stylesheet" href="../css/main.css">
 </head>
-
 <body>
  <header id="header">
   <div class="header-banner">
@@ -55,13 +54,11 @@
    <li>
     <a class="color-primary" href="#contacto-home">CONTACTO</a> 
    </li>
-  </ul>
-  <ul class="nav-menu-color-primary" >  
    <li>
-    <a class="fondo" href="items/iniciarsesion.html">Iniciar Sesión</a> 
+    <a class="link color-primary" href="items/iniciarsesion.html">Iniciar Sesión</a> 
    </li>
    <li>
-    <a class="fondo" href="items/micarrito.html">Mi Carrito</a> 
+    <a class="link color-primary" href="items/micarrito.html">Mi Carrito</a> 
    </li>
   </ul>
  </nav>
@@ -72,51 +69,180 @@
     <h2> INSPIRATE</h2>
    </div>
    <div class="pagina-principal">
-    <img  class="fotos-beauty"src="../img/unasprimaveramulticolor-pastel.jpg" alt="COLECCION">
-    <img  class="fotos-beauty"src="../img/esmaltesveranopasteles.jpg" alt="COLECCION">
-    <img class="fotos-beauty" src="../img/colores-unas-moda.jpg" alt="COLECCION">
-    <img class="fotos-beauty" src="../img/unas-primavera-verano-abstractas-base-transparente.jpg" alt="COLECCION">
-    <img class="fotos-cuadradas" src="../img/unas-para-verano-2022.jpg" alt="COLECCION">
-    <img class="fotos-cuadradas"src="../img/unasveranobe.jpg" alt="COLECCIÓN">
-    <img class="fotos-cuadradas" src="../img/unascombinacionveranobe.jpg" alt="COLECCION">
-    <img class="fotos-beauty1 efecto" src="../img/unasazulbe.jpg" alt="COLECCION">
-   </div>
-   <div>
-    <img class="fotos-beauty" src="../img/unasmetalizadasdecobe.jpg" alt="COLECCION">
-    <img class="fotos-beauty"src="../img/unasmetalizada.jpg" alt="COLECCION">
-   <div>
-    <img class="fotos-beauty1 efecto"src="../img/unasesmalte-metalizado-efecto-espejo.jpg" alt="COLECCION">
-   </div> 
-   <div>
-    <img class="fotos-beauty1 efecto"src="../img/parfumairdigioia-acquadigioia-sundigioia.jpg" alt="COLECCION">
-   </div>
-   <div>
-    <img class="fotos-cuadradas "src="../img/parfunarmaniocean.jpg" alt="COLECCION">
-    <img class="fotos-cuadradas"src="../img/parfumacquaverdedigioia.jpg" alt="COLECCION">
-    <img class="fotos-cuadradas" src="../img/parfumskydigioia2.jpg" alt="COLECCION">
-   </div>
-   <div class="pagina-principal">
+    <figure class="figure">
+      <img  class="fotos-beauty"src="../img/unasprimaveramulticolor-pastel.jpg" alt="COLECCION">
+      <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
+      <figcaption class="figure-caption text-end">A caption for the above image.</figcaption>
+     </figure>
+     <figure class="figure">
+      <img  class="fotos-beauty"src="../img/esmaltesveranopasteles.jpg" alt="COLECCION">
+      <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
+      <figcaption class="figure-caption text-end">A caption for the above image.</figcaption>
+     </figure>
+     <figure class="figure">
+      <img class="fotos-beauty" src="../img/colores-unas-moda.jpg" alt="COLECCION">
+      <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
+      <figcaption class="figure-caption text-end">A caption for the above image.</figcaption>
+     </figure>
+     <figure class="figure">
+      <img class="fotos-beauty" src="../img/unas-primavera-verano-abstractas-base-transparente.jpg" alt="COLECCION">
+      <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
+      <figcaption class="figure-caption text-end">A caption for the above image.</figcaption>
+     </figure>
+     <figure class="figure">
+      <img class="fotos-beauty2" src="../img/unas-para-verano-2022.jpg" alt="COLECCION">
+      <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
+      <figcaption class="figure-caption text-end">A caption for the above image.</figcaption>
+     </figure>
+     <figure class="figure">
+      <img class="fotos-beauty2"src="../img/unasveranobe.jpg" alt="COLECCIÓN">
+      <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
+      <figcaption class="figure-caption text-end">A caption for the above image.</figcaption>
+     </figure>
+     <figure class="figure">
+      <img class="fotos-beauty2" src="../img/unascombinacionveranobe.jpg" alt="COLECCION">
+      <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
+      <figcaption class="figure-caption text-end">A caption for the above image.</figcaption>
+     </figure>
+     <figure class="figure">
+      <img class="fotos-beauty1 efecto" src="../img/unasazulbe.jpg" alt="COLECCION">
+      <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
+      <figcaption class="figure-caption text-end">A caption for the above image.</figcaption>
+     </figure>
+    </div>
     <div>
-    <img  class="fotos-beauty1 efecto"src="../img/beauty-maxmixbvlgary.jpg" alt="COLECCION">
-   </div>
-    <img class="fotos-beauty" src="../img/beauty-parfumbvlgariomnia-pink-sapphire-2.jpg" alt="COLECCION">
-    <img class="fotos-cuadradas" src="../img/beauty-parfumomnia-pink-sapphire.jpg" alt="COLECCION">
-   <div>
-    <img  class="fotos-cuadradas zoom"src="../img/beauty-parfumbvlgariomnia-eau-de-toilette.jpg" alt="COLECCION">
-    <img class="fotos-beauty zoom" src="../img/beauty-parfumbvlgariomniacrystaline-eau-de-toilette.jpg" alt="COLECCION">
-    <img class="fotos-cuadradas zoom"src="../img/beauty-parfumbvlgariomnia-by-mary-katrantzou.jpg" alt="COLECCIÓN">
-   </div> 
-    <img class="fotos-beauty1 imagen" src="../img/beauty-cacharel2.jpg" alt="COLECCION">
-    <img class="fotos-cuadradas" src="../img/beauty-parfumcacharel.jpg" alt="COLECCION">
-    <img class="fotos-cuadradas" src="../img/beauty-flower--by-kenzo-eau-de-vie-eau-de-parfum.jpg" alt="COLECCION">
-    <img class="fotos-cuadradas" src="../img/beauty-kenzo.jpg" alt="COLECCION">
-    <img class="fotos-beauty"src="../img/beauty-myway-giorgio.jpg" alt="COLECCION">
-    <img class="fotos-beauty imagen"src="../img/beauty-parfumbeigecalvin.jpg" alt="COLECCION">
-    <img class="fotos-beauty efecto"src="../img/parfumgivenchybordo.jpg" alt="COLECCION">
-    <img class="fotos-beauty efecto"src="../img/beauty-parfumlinterditrojogivenchy.jpg" alt="COLECCION">
-    <img class="fotos-beauty1"src="../img/parfumlinterdit.jpg" alt="COLECCION">
-    <img class="fotos-beauty1 imagen" src="../img/beauty-parfumfragancias-de-Lacoste.jpg" alt="COLECCION">
-   </div>
+     <figure class="figure">
+      <img class="fotos-beauty" src="../img/unasmetalizadasdecobe.jpg" alt="COLECCION">
+      <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
+      <figcaption class="figure-caption text-end">A caption for the above image.</figcaption>
+     </figure>
+     <figure class="figure">
+      <img class="fotos-beauty"src="../img/unasmetalizada.jpg" alt="COLECCION">
+      <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
+      <figcaption class="figure-caption text-end">A caption for the above image.</figcaption>
+     </figure>
+    </div>
+    <div>
+     <figure class="figure">
+      <img class="fotos-beauty1 efecto"src="../img/unasesmalte-metalizado-efecto-espejo.jpg" alt="COLECCION">
+      <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
+      <figcaption class="figure-caption text-end">A caption for the above image.</figcaption>
+     </figure>
+    </div> 
+    <div>
+     <figure class="figure">
+      <img class="fotos-beauty1 efecto"src="../img/parfumairdigioia-acquadigioia-sundigioia.jpg" alt="COLECCION">
+      <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
+      <figcaption class="figure-caption text-end">A caption for the above image.</figcaption>
+     </figure>
+    </div>
+    <div>
+     <figure class="figure">
+      <img class="fotos-beauty2 "src="../img/parfunarmaniocean.jpg" alt="COLECCION">
+      <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
+      <figcaption class="figure-caption text-end">A caption for the above image.</figcaption>
+     </figure>
+     <figure class="figure">
+      <img class="fotos-beauty2"src="../img/parfumacquaverdedigioia.jpg" alt="COLECCION">
+      <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
+      <figcaption class="figure-caption text-end">A caption for the above image.</figcaption>
+     </figure>
+     <figure class="figure">
+      <img class="fotos-beauty2" src="../img/parfumskydigioia2.jpg" alt="COLECCION">
+      <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
+      <figcaption class="figure-caption text-end">A caption for the above image.</figcaption>
+     </figure>
+    </div>
+    <div class="pagina-principal">
+     <div>
+      <figure class="figure">
+       <img  class="fotos-beauty1 efecto"src="../img/beauty-maxmixbvlgary.jpg" alt="COLECCION">
+       <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
+       <figcaption class="figure-caption text-end">A caption for the above image.</figcaption>
+      </figure>
+     </div>
+     <div>
+      <figure class="figure">
+       <img class="fotos-beauty" src="../img/beauty-parfumbvlgariomnia-pink-sapphire-2.jpg" alt="COLECCION">
+       <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
+       <figcaption class="figure-caption text-end">A caption for the above image.</figcaption>
+      </figure>
+      <figure class="figure">
+       <img class="fotos-beauty2" src="../img/beauty-parfumomnia-pink-sapphire.jpg" alt="COLECCION">
+       <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
+       <figcaption class="figure-caption text-end">A caption for the above image.</figcaption>
+      </figure>
+     </div>
+     <div>
+      <figure class="figure">
+       <img  class="fotos-beauty2 zoom"src="../img/beauty-parfumbvlgariomnia-eau-de-toilette.jpg" alt="COLECCION">
+       <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
+       <figcaption class="figure-caption text-end">A caption for the above image.</figcaption>
+      </figure>
+      <figure class="figure">
+       <img class="fotos-beauty zoom" src="../img/beauty-parfumbvlgariomniacrystaline-eau-de-toilette.jpg" alt="COLECCION">
+       <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
+       <figcaption class="figure-caption text-end">A caption for the above image.</figcaption>
+      </figure>
+      <figure class="figure">
+       <img class="fotos-beauty2 zoom"src="../img/beauty-parfumbvlgariomnia-by-mary-katrantzou.jpg" alt="COLECCIÓN">
+       <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
+       <figcaption class="figure-caption text-end">A caption for the above image.</figcaption>
+      </figure>
+     </div> 
+     <div>
+      <figure class="figure">
+       <img class="fotos-beauty1 imagen" src="../img/beauty-cacharel2.jpg" alt="COLECCION">
+       <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
+       <figcaption class="figure-caption text-end">A caption for the above image.</figcaption>
+      </figure>
+      <figure class="figure">
+       <img class="fotos-beauty2" src="../img/beauty-parfumcacharel.jpg" alt="COLECCION">
+       <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
+       <figcaption class="figure-caption text-end">A caption for the above image.</figcaption>
+      </figure>
+      <figure class="figure">
+       <img class="fotos-beauty2" src="../img/beauty-flower--by-kenzo-eau-de-vie-eau-de-parfum.jpg" alt="COLECCION">
+       <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
+       <figcaption class="figure-caption text-end">A caption for the above image.</figcaption>
+      </figure>
+      <figure class="figure">
+       <img class="fotos-beauty2" src="../img/beauty-kenzo.jpg" alt="COLECCION">
+       <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
+       <figcaption class="figure-caption text-end">A caption for the above image.</figcaption>
+      </figure>
+      <figure class="figure">
+       <img class="fotos-beauty"src="../img/beauty-myway-giorgio.jpg" alt="COLECCION">
+       <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
+       <figcaption class="figure-caption text-end">A caption for the above image.</figcaption>
+      </figure>
+      <figure class="figure">
+       <img class="fotos-beauty imagen"src="../img/beauty-parfumbeigecalvin.jpg" alt="COLECCION">
+       <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
+       <figcaption class="figure-caption text-end">A caption for the above image.</figcaption>
+      </figure>
+      <figure class="figure">
+       <img class="fotos-beauty efecto"src="../img/parfumgivenchybordo.jpg" alt="COLECCION">
+       <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
+       <figcaption class="figure-caption text-end">A caption for the above image.</figcaption>
+      </figure>
+      <figure class="figure">
+       <img class="fotos-beauty efecto"src="../img/beauty-parfumlinterditrojogivenchy.jpg" alt="COLECCION">
+       <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
+       <figcaption class="figure-caption text-end">A caption for the above image.</figcaption>
+      </figure>
+      <figure class="figure">
+       <img class="fotos-beauty1"src="../img/parfumlinterdit.jpg" alt="COLECCION">
+       <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
+       <figcaption class="figure-caption text-end">A caption for the above image.</figcaption>
+      </figure>
+      <figure class="figure">
+       <img class="fotos-beauty1 imagen" src="../img/beauty-parfumfragancias-de-Lacoste.jpg" alt="COLECCION">
+       <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
+       <figcaption class="figure-caption text-end">A caption for the above image.</figcaption>
+      </figure>
+     </div>
+    </div>
  </main>
 
  <hr>
