--- a/pages/items/iniciarsesion.html
+++ b/pages/items/iniciarsesion.html
@@ -12,48 +12,46 @@
  <link rel="shortcut icon" href="../../img/favicon3.png">
  <title>Inicio de Sesión</title>
 </head>
-
 <body>
   <header id="header">
-   <!-- logo/Home -->
-  <a href="../../index.html"><img  id="logo-home" src= "../../img/faviconII200x100px.png" alt="BE"></a>
-  </header>
-
+    <!-- logo/Home -->
+   <a href="../../index.html"><img  id="logo-home" src= "../../img/faviconII200x100px.png" alt="BE"></a>
+   </header>
   <nav id="nav" class="nav">
-    <input id="abrir-cerrar" name="abrir-cerrar" type="checkbox" value="" />
-    <label for="abrir-cerrar" class="toggle-button">
-     <span class="cerrar" title="Cerrar">Cerrar</span>
-     <span class="abrir" title="Abrir">Abrir</span>
-    </label>
-    <!-- Listas y links de Navegación -->
-    <ul class="nav-menu color-primary">
-     <li class="nav-menu-item">
-      <a class="color-primary" href="../../index.html">HOME </a>
-     </li>        
-     <li> 
-      <a class="color-primary" href="../newin.html">NEW IN</a>
-     </li>
-     <li>
-      <a class="color-primary" href="../coleccion.html">COLECCION </a>
-     </li>
-     <li>
-      <a class="color-primary" href="../accesorios.html">ACCESORIOS</a>
-     </li>
-     <li>
-      <a class="color-primary" href="../beauty.html">BEAUTY</a>
-     </li>
-     <li>
-      <a class="color-primary" href="../promociones.html">PROMOCIONES</a>
-     </li>
-     <li>
-      <a class="color-primary" href="#contacto-home">CONTACTO</a> 
-     </li>
-    </ul>
+   <input id="abrir-cerrar" name="abrir-cerrar" type="checkbox" value="" />
+   <label for="abrir-cerrar" class="toggle-button">
+    <span class="cerrar" title="Cerrar">Cerrar</span>
+    <span class="abrir" title="Abrir">Abrir</span>
+   </label>
+   <!-- Listas y links de Navegación -->
+   <ul class="nav-menu color-primary">
+    <li class="nav-menu-item">
+     <a class="color-primary" href="../../index.html">HOME </a>
+    </li>        
+    <li> 
+     <a class="color-primary" href="../newin.html">NEW IN</a>
+    </li>
+    <li>
+     <a class="color-primary" href="../coleccion.html">COLECCION </a>
+    </li>
+    <li>
+     <a class="color-primary" href="../accesorios.html">ACCESORIOS</a>
+    </li>
+    <li>
+     <a class="color-primary" href="../beauty.html">BEAUTY</a>
+    </li>
+    <li>
+     <a class="color-primary" href="../promociones.html">PROMOCIONES</a>
+    </li>
+    <li>
+     <a class="color-primary" href="#contacto-home">CONTACTO</a> 
+    </li>
+   </ul>
  </nav>
  
  <main>
    <!-- Formulario de Inicio de sesion/Crear Cuenta] -->
-   <h3>INICIA SESION</h3>
+   <h3 class="pagina-principal">INICIA SESION</h3>
    <form class="registro" action="">
     <div>
      <label class="registro-registro" for="">E-MAIL</label>
@@ -68,7 +66,7 @@
     </div>
    </form>
    <!--Formularios para registrarse nuevo usuario  --> 
-   <h3>NUEVO USUARIO</h3>
+   <h3 class="pagina-principal">NUEVO USUARIO</h3>
    <form class="registro" action="">
     <div>
      <label class="registro-registro"for="">E-MAIL</label>
