--- a/pages/coleccion.html
+++ b/pages/coleccion.html
@@ -56,19 +56,18 @@
    <li>
     <a class="color-primary" href="#contacto-home">CONTACTO</a>
    </li>
-  </ul>
-  <ul class="nav-menu-color-primary" > 
    <li>
-    <a class="fondo" href="items/iniciarsesion.html">Iniciar Sesión</a>
+    <a class="link color-primary" href="items/iniciarsesion.html">Iniciar Sesión</a>
    </li>
    <li>
-    <a class="fondo" href="items//micarrito.html">Mi Carrito</a>
+    <a class="link color-primary" href="items//micarrito.html">Mi Carrito</a>
+   </li>
   </ul>
  </nav>
 
  <hr>
 
- <main class="container-fluid py3">
+ <main  class="container-fluid py3">
   <!-- Probando aplicar Multimedia -->
   <iframe title="vimeo-player" src="https://player.vimeo.com/video/730454329?h=a284fe1e10" width="640" height="360" frameborder="0" allowfullscreen></iframe>
   <div class="pagina-principal">
@@ -79,79 +78,103 @@
    <div class="container-fluid py5 px5">
     <div class="wrapper1 fotoscoleccion row">
      <div class="col-12 col-md6">
-      <img class="fotos1"src="https://lh3.googleusercontent.com/p/AF1QipOYOVeEl9df4i2BX_SHNwT-xAJE6PSJ0DaZRigW=w768-h768-n-o-v1" alt="COLECCION">
-      <img class="fotos1-altas" src="http://d3ugyf2ht6aenh.cloudfront.net/stores/001/012/978/products/g28a46121-d763a25b2a362a339e16608334184820-640-0.jpg" alt="COLECCION">
-      <img class="fotos1-altas-2" src="../img/remerarockstar.jpg" alt="COLECCION">
-      <img class="fotos1-alargadas" src="../img/coleccion-remeaerosmith..jpg" alt="COLECCION">
+      <figure class="figure">
+       <img class="fotos1"src="https://lh3.googleusercontent.com/p/AF1QipOYOVeEl9df4i2BX_SHNwT-xAJE6PSJ0DaZRigW=w768-h768-n-o-v1" alt="COLECCION">
+       <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
+       <figcaption class="figure-caption text-end">A caption for the above image.</figcaption>
+      </figure>
+      <figure class="figure">
+       <img class="fotos1-altas" src="http://d3ugyf2ht6aenh.cloudfront.net/stores/001/012/978/products/g28a46121-d763a25b2a362a339e16608334184820-640-0.jpg" alt="COLECCION">
+       <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
+       <figcaption class="figure-caption text-end">A caption for the above image.</figcaption>
+      </figure>
+      <figure class="figure">
+       <img class="fotos1-altas-2" src="../img/remerarockstar.jpg" alt="COLECCION">
+       <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
+       <figcaption class="figure-caption text-end">A caption for the above image.</figcaption>
+      </figure>
+      <figure class="figure">
+       <img class="fotos1-alargadas" src="../img/coleccion-remeaerosmith..jpg" alt="COLECCION">
+      <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
+      <figcaption class="figure-caption text-end">A caption for the above image.</figcaption>
+      </figure>
      </div>
     </div>
-    <div class="producto">  
-      <p class="producto">Pantalón</p>
-      <p class="producto">Precio</p>
-      <p class="producto">Pantalón</p>
-      <p class="producto">Precio</p>
-      <p class="producto">Pantalón</p> 
-      <p class="producto">Precio</p>
-     </div>
-    </div>
-    <div class="wrapper1 fotoscoleccion row">
-     <div class="col-12 col-md6">
+   </div>
+   <div class="wrapper1 fotoscoleccion row">
+    <div class="col-12 col-md6">
+     <figure class="figure">
       <img class="fotos-cuadradas2"src="../img/remeraceratigiraahivamos.jpg" alt="COLECCION">
+      <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
+      <figcaption class="figure-caption text-end">A caption for the above image.</figcaption>
+     </figure>
+     <figure class="figure">
       <img class="fotos-cuadradas2"src="../img/remeraceratibasement.jpg" alt="COLECCION">
+      <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
+      <figcaption class="figure-caption text-end">A caption for the above image.</figcaption>
+     </figure>
+     <figure class="figure">
       <img class="fotos-cuadradas3" src="https://lh3.googleusercontent.com/p/AF1QipNR2LRLujV500dMuf4aV_Zc-yxy625jQ1kFH9nV=w1080-h608-p-no-v0" alt="COLECCION">
-     </div>
+      <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
+      <figcaption class="figure-caption text-end">A caption for the above image.</figcaption>
+     </figure>
     </div>
-    <div>
-     <p class="producto">Pantalón</p> 
-     <p class="producto">Precio</p>
-     <p class="producto">Pantalón</p> 
-     <p class="producto">Precio</p>
-     <p class="producto">Pantalón</p> 
-     <p class="producto">Precio</p>
-    </div>
-    <div class="wrapper1 fotoscoleccion row">
-     <div class="col-12 col-md6">  
+   </div>
+   <div class="wrapper1 fotoscoleccion row">
+    <div class="col-12 col-md6">  
+     <figure class="figure">
       <img class="fotos-cuadradas3"src=../img/coleccion-camisaconflorestranslucida.jpg alt="COLECCION">
-    </div>
-    <div class="producto">  
-     <p class="producto">Pantalón</p>
-     <p class="producto">Precio</p>
+      <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
+      <figcaption class="figure-caption text-end">A caption for the above image.</figcaption>
+     </figure>
     </div>
     <div class="wrapper1 fotoscoleccion row">
      <div class="col-12 col-md6">
-      <img class="fotos-cuadradas3"src=../img/coleccion-look14.jpg alt="COLECCION">
-      <img class="fotos-cuadradas-4"src=../img/coleccion-cardiganybiker2023.jpg alt="COLECCION">
-      <p class="producto">Pantalón</p>
-      <p class="producto">Precio</p>
-      <p class="producto">Pantalón</p>
-      <p class="producto">Precio</p>
+      <figure class="figure">
+       <img class="fotos-cuadradas3"src=../img/coleccion-look14.jpg alt="COLECCION">
+       <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
+       <figcaption class="figure-caption text-end">A caption for the above image.</figcaption>
+      </figure>
+      <figure class="figure">
+       <img class="fotos-cuadradas-4"src=../img/coleccion-cardiganybiker2023.jpg alt="COLECCION">
+       <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
+       <figcaption class="figure-caption text-end">A caption for the above image.</figcaption>
+      </figure>
      </div>
     </div>
     <div class="wrapper1 fotoscoleccion row">
      <div class="col-12 col-md6">
-      <img class="fotos-cuadradas-4"src=../img/coleccion-tenis-vestidocelestepastel.jpg alt="COLECCION">
-      <div class="producto">  
-       <p class="producto">Pantalón</p>
-       <p class="producto">Precio</p>
-      </div>
+      <figure class="figure">
+       <img class="fotos-cuadradas-4"src=../img/coleccion-tenis-vestidocelestepastel.jpg alt="COLECCION">
+       <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
+       <figcaption class="figure-caption text-end">A caption for the above image.</figcaption>
+      </figure>
+     </div>
     </div>
     <div class="wrapper1 fotoscoleccion5 row">
      <div class="col-12 col-md6">   
-      <img class="fotos-cuadradas-5" src=../img/coleccion-camisaypantlila.jpg alt="COLECCION">
+      <figure class="figure">
+       <img class="fotos-cuadradas-5" src=../img/coleccion-camisaypantlila.jpg alt="COLECCION">
+       <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
+       <figcaption class="figure-caption text-end">A caption for the above image.</figcaption>
+     </figure>
+     <figure class="figure">
       <img class="fotos-cuadradas-5" src=../img/coleccion-pantfluorose.jpg alt="COLECCION">
+      <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
+      <figcaption class="figure-caption text-end">A caption for the above image.</figcaption>
+     </figure>
+     <figure class="figure">
       <img class="fotos-cuadradas-5" src=../img/coleccion-2022.jpg alt="COLECCION">
+      <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
+      <figcaption class="figure-caption text-end">A caption for the above image.</figcaption>
+     </figure>
+     <figure class="figure">
       <img class="fotos-cuadradas-5" src=../img/coleccion-marion-verdeagua.jpg alt="COLECCION">
-     </div>
+      <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
+      <figcaption class="figure-caption text-end">A caption for the above image.</figcaption>
+     </figure>
     </div>
-    <div class="producto">  
-     <p class="producto">Pantalón</p>
-     <p class="producto">Precio</p>
-     <p class="producto">Pantalón</p>
-     <p class="producto">Precio</p>
-     <p class="producto">Pantalón</p> 
-     <p class="producto">Precio</p>
-    
-    </div>
+   </div>
   </div>
  </main>
  <hr>
