--- a/pages/newin.html
+++ b/pages/newin.html
@@ -16,9 +16,7 @@
  <link rel="shortcut icon" href="../img/favicon 3.png">
  <link rel="stylesheet" href="../css/main.css">
 </head>
- 
 <body>
-  
  <header id="header">
   <div class="header-banner">
    <b> Envío gratis desde $10.000</b>
@@ -36,40 +34,39 @@
   <!-- Listas y links de Navegación -->
   <ul class="nav-menu color-primary">
    <li class="nav-menu-item">
-     <a class="color-primary" href="../index.html">HOME </a>
+    <a class="color-primary" href="../index.html">HOME </a>
    </li>        
    <li> 
-     <a class="color-primary" href="newin.html">NEW IN</a>
+    <a class="color-primary" href="newin.html">NEW IN</a>
    </li>
    <li>
-     <a class="color-primary" href="coleccion.html">COLECCION </a>
+    <a class="color-primary" href="coleccion.html">COLECCION </a>
    </li>
    <li>
-     <a class="color-primary" href="accesorios.html">ACCESORIOS</a>
+    <a class="color-primary" href="accesorios.html">ACCESORIOS</a>
    </li>
    <li>
-     <a class="color-primary" href="beauty.html">BEAUTY</a>
+    <a class="color-primary" href="beauty.html">BEAUTY</a>
    </li>
    <li>
-     <a class="link color-primary" href="promociones.html">PROMOCIONES</a>
+    <a class="link color-primary" href="promociones.html">PROMOCIONES</a>
    </li>
    <li>
-     <a class="color-primary" href="#contacto-home">CONTACTO</a> 
+    <a class="color-primary" href="#contacto-home">CONTACTO</a> 
    </li>
+   </li>
+   <li>
+    <a class="link color-primary" href="items/iniciarsesion.html">Iniciar Sesión</a> 
+   </li>
+   <li>
+    <a class="link color-primary" href="items/micarrito.html">Mi Carrito</a> 
    </li>
   </ul>
-   <ul class="nav-menu-color-primary" > 
-  <li>
-   <a class="fondo" href="items/iniciarsesion.html">Iniciar Sesión</a> 
-  </li>
-  <li>
-   <a class="fondo" href="items/micarrito.html">Mi Carrito</a> 
- </ul>
  </nav>
 
  <hr>
 
- <main>
+ <main >
   <div class="pagina-principal">
    <h1 class="new-in" >Descubri las tendencias de la temporada</h1>     
   </div>
@@ -126,36 +123,59 @@
  
    
   <div class="pagina-principal">
-   <img class="fotos-newin" src= ../img/look-palazzo-rosa-yagmour-verano-2023.jpg alt="NEW IN">
-   <img class="fotos-newin1" src=../img/newin-pantsancho-vestir-assira-2023.jpg alt="NEW IN">
-   <img  class="fotos-newin"src= ../img/newinpantlila.jpg alt="NEW IN">
-   <img class="fotos-newin1" src= ../img/newinblazerlila.jpg alt="NEW IN">
-  </div>
-  <div class="producto">  
-   <p class="producto">Pantalón</p> <p class="producto">Precio</p>
-   <p class="producto">Pantalón</p> <p class="producto">Precio</p>
-   <p class="producto">Pantalón</p> <p class="producto">Precio</p>
-  </div>
-  <div class="pagina-principal">
-   <img  class="fotos-newin2"src=../img/newin-topnegro-pantsrosa.jpg alt="NEW IN">
-   <img class="fotos-newin3"src=../img/newin-pantamarillopastel.jpg alt="NEW IN">
-  </div>
-  <div class="producto" >
-   <p class="producto">Pantalón</p> <p class="producto">Precio</p>
-   <p class="producto">Pantalón</p> <p class="producto" >Precio</p>
-   <p class="producto" >Pantalón</p> <p class="producto" >Precio</p>
-  </div>
-  <div>
-    <img class="fotos-newin4"src=../img/newin-naranjatotal.jpg alt="NEW IN">
-    <img class="fotos-newin5"src=../img/newin-remerprimaverabeige.jpg alt="NEW IN">
-    <img class="fotos-newin5"src=../img/newin-jeansmoda-2022.jpg alt="NEW IN">
+    <figure class="figure">
+      <img class="fotos-newin" src= ../img/look-palazzo-rosa-yagmour-verano-2023.jpg alt="NEW IN">
+      <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
+      <figcaption class="figure-caption text-end">A caption for the above image.</figcaption>
+     </figure>
+     <figure class="figure">
+      <img class="fotos-newin1" src=../img/newin-pantsancho-vestir-assira-2023.jpg alt="NEW IN">
+      <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
+      <figcaption class="figure-caption text-end">A caption for the above image.</figcaption>
+     </figure>
+     <figure class="figure">
+      <img  class="fotos-newin"src= ../img/newinpantlila.jpg alt="NEW IN">
+      <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
+      <figcaption class="figure-caption text-end">A caption for the above image.</figcaption>
+    </figure>
+    <figure class="figure">
+     <img class="fotos-newin1" src= ../img/newinblazerlila.jpg alt="NEW IN">
+     <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
+     <figcaption class="figure-caption text-end">A caption for the above image.</figcaption>
+    </figure>
    </div>
-   <div class="producto" >
-    <p class="producto">Pantalón</p> <p class="producto" >Precio</p>
-    <p class="producto">Pantalón</p> <p class="producto">Precio</p>
-  </div>
+   <div class="pagina-principal">
+    <figure class="figure">
+     <img  class="fotos-newin2"src=../img/newin-topnegro-pantsrosa.jpg alt="NEW IN">
+     <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
+     <figcaption class="figure-caption text-end">A caption for the above image.</figcaption>
+    </figure>
+    <figure class="figure">
+     <img class="fotos-newin3"src=../img/newin-pantamarillopastel.jpg alt="NEW IN">
+     <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
+     <figcaption class="figure-caption text-end">A caption for the above image.</figcaption>
+    </figure>
+   </div>
+   <div>
+    <figure class="figure">
+     <img class="fotos-newin4"src=../img/newin-naranjatotal.jpg alt="NEW IN">
+     <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
+     <figcaption class="figure-caption text-end">A caption for the above image.</figcaption>
+    </figure>
+    <figure class="figure">
+     <img class="fotos-newin5"src=../img/newin-remerprimaverabeige.jpg alt="NEW IN">
+     <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
+     <figcaption class="figure-caption text-end">A caption for the above image.</figcaption>
+    </figure>
+    <figure class="figure">
+     <img class="fotos-newin5"src=../img/newin-jeansmoda-2022.jpg alt="NEW IN">
+     <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
+     <figcaption class="figure-caption text-end">A caption for the above image.</figcaption>
+    </figure>
+   </div>
  </main>
- 
+</div>
+
  <hr>
 
  <footer>
@@ -195,7 +215,6 @@
   </ul>
     <p>Quiero devolver mi pedido. Be-todos los derechos reservados. Terminos y Condiciones</p>
  </footer>
- 
  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 </body>
 </html>
