--- a/pages/promociones.html
+++ b/pages/promociones.html
@@ -17,14 +17,13 @@
   <!-- LOGO/FAVICOM -->
   <link rel="shortcut icon" href="../img/favicon3.png">
 </head>
-
 <body>
  <header id="header">
   <div class="header-banner">
    <b> Envío gratis desde $10.000</b>
   </div>
   <!-- logo/Home -->
-   <a href="../index.html"> <img  id="logo-home" src= "../img/faviconII200x100px.png" alt="BE"></a>
+  <a href="../index.html"> <img  id="logo-home" src= "../img/faviconII200x100px.png" alt="BE"></a>
  </header>
    
  <nav id="nav" class="nav">
@@ -51,19 +50,19 @@
     <a class="color-primary" href="promociones.html">PROMOCIONES</a>
    </li>
    <li>
-    <a class="color-primary" href="#contacto-home">CONTACTO</a> 
-   </li>
-  </ul>
-  <ul class="nav-menu-color-primary" > 
-   <li>
-    <a class="fondo" href="items/iniciarsesion.html">Iniciar Sesión</a> 
+    <a class="link color-primary" href="#contacto-home">CONTACTO</a> 
    </li>
    <li>
-    <a class="fondo" href="items/micarrito.html">Mi Carrito</a> 
+    <a class="link color-primary" href="items/iniciarsesion.html">Iniciar Sesión</a> 
+   </li>
+   <li>
+    <a class="link color-primary" href="items/micarrito.html">Mi Carrito</a> 
+   </li>
   </ul>
  </nav>
 
  <main>
+  <div class="container">
   <div class="pagina-principal">
     <h1>PROMOCIONES</h1>
     <h2> ESPECIALES</h2>
@@ -101,12 +100,36 @@
    <H3>PROMOCION VALIDA DESDE EL 15 DE SEPTIEMBRE DE 2022 HASTA EL 3 DE SEPTIEMBRE DE 2022 O HASTA AGOTAR STOCK EN LA TIENDA ONLINE, LO QUE OCURRA PRIMERO. LOS DESCUENTOS SE APLICARAN SOBRE LOS PRECIOS DE HASTA EL 50% DE DESCUENTO Y DE HASTA 3 CUOTAS SIN INTERES.</H3>
   </div>
   <div class="pagina-principal promolooks">
-   <img class="fotos-promo " src= ../img/short-dorado-tucci.jpg alt="INSPIRACION LOOKS">
-   <img class="fotos-promo promo" src= ../img/promo-sacobeigepastel.jpg alt="INSPIRACION LOOKS">
-   <img class="fotos-promo promo" src= ../img/coleccion-joggingwhiterayonegro.jpg alt="INSPIRACION LOOKS">
-   <img class="fotos-promo promo" src= ../img/promo-remerablackblock.jpg alt="INSPIRACION LOOKS">
-   <img class="fotos-promo promo" src= ../img/promo-look9.jpg alt="INSPIRACION LOOKS">
-   <img class="fotos-promo promo" src= ../img/promo-look16.jpg alt="INSPIRACION LOOKS">
+   <figure class="figure">
+    <img class="fotos-promo " src= ../img/short-dorado-tucci.jpg alt="INSPIRACION LOOKS">
+    <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
+    <figcaption class="figure-caption text-end">$PRECIO.</figcaption>
+   </figure>
+   <figure class="figure">
+    <img class="fotos-promo promo" src= ../img/promo-sacobeigepastel.jpg alt="INSPIRACION LOOKS">
+    <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
+    <figcaption class="figure-caption text-end">$PRECIO.</figcaption>
+   </figure>
+   <figure class="figure">
+    <img class="fotos-promo promo" src= ../img/coleccion-joggingwhiterayonegro.jpg alt="INSPIRACION LOOKS">
+    <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
+    <figcaption class="figure-caption text-end">$PRECIO.</figcaption>
+   </figure>
+   <figure class="figure">
+    <img class="fotos-promo promo" src= ../img/promo-remerablackblock.jpg alt="INSPIRACION LOOKS">
+    <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
+    <figcaption class="figure-caption text-end">$PRECIO.</figcaption>
+   </figure>
+   <figure class="figure">
+    <img class="fotos-promo promo" src= ../img/promo-look9.jpg alt="INSPIRACION LOOKS">
+    <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
+    <figcaption class="figure-caption text-end">$PRECIO.</figcaption>
+   </figure>
+   <figure class="figure">
+    <img class="fotos-promo promo" src= ../img/promo-look16.jpg alt="INSPIRACION LOOKS">
+    <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
+    <figcaption class="figure-caption text-end">$PRECIO.</figcaption>
+   </figure>
   </div>
  </main>
 
